feat(policy): code review
